--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^5.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
     "bootstrap": "^4.1.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "ngx-pagination": "^3.1.0",
     "rxjs": "^5.5.6",
